examples/test/testpolicy9176.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9176
  namespace: namespace392
spec:
  podSelector:
    matchLabels:
      key36: value48
      key29: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value12
          key28: value17
          key18: value12
      podSelector:
        matchLabels:
          key0: value19
